--- a/xmas.html
+++ b/xmas.html
@@ -1,53 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-<meta charset="utf-8">
-<title>Christmas Tree</title>
+<meta charset="utf-8"/>
+<title>圣诞快乐</title>
 <style>
-    body{background:#000;color:#fff;font-family:monospace;font-size:20px;
-         display:flex;justify-content:center;align-items:center;height:100vh;margin:0;overflow:hidden;}
-    pre{line-height:1.2em;letter-spacing:6px;}
-    /* 雪花 */
-    .snow{position:fixed;top:-10px;font-size:14px;color:#fff;user-select:none;animation:fall linear infinite;}
-    @keyframes fall{to{transform:translateY(100vh) rotate(360deg);}}
+body{margin:0;background:linear-gradient(#001845,#000);color:#fff;
+     font-family:Consolas,monospace;height:100vh;display:flex;
+     flex-direction:column;align-items:center;justify-content:center;}
+pre{line-height:1.25em;font-size:20px;text-shadow:0 0 5px #0f0;}
+#wish{color:#ffd166;margin-top:15px;font-size:22px;letter-spacing:2px;}
+/* 雪花 */
+.snow{position:fixed;top:-10px;font-size:14px;color:#fff;animation:fall 4s linear infinite;}
+@keyframes fall{to{transform:translateY(100vh);}}
 </style>
 </head>
 <body>
-<pre>                 🌟
-                 🟢
-                🟢🟢🟢
-               🟢🟢🟢🟢🟢
-              🟢🟢🟢🟢🟢🟢🟢
-             🟢🟢🟢🟢🟢🟢🟢🟢🟢
-            🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
-           🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
-          🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
-         🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
-        🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
-       🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
-      🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
-     🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
-    🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
-   🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
-  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
-🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢
-                🟤🟤🟤
-                🟤🟤🟤</pre>
+<pre id="tree"></pre>
+<div id="wish">朱光宇 💌 愿你被这个世界温柔以待，平安喜乐，万事胜意！</div>
 
 <script>
-// 动态雪花
-function snow(){
+/* ===== 只需改这里即可换祝福 ===== */
+const myWish = "愿你被这个世界温柔以待，平安喜乐，万事胜意！";
+
+/* 生成圣诞树 */
+const H = 18;
+const STAR = '⭐';
+const LEAF = '●';
+const TRUNK = '┃';
+let tree = STAR.padStart(H) + '\n';
+for (let i = 1; i <= H; i++) {
+  tree += ' '.repeat(H - i) + LEAF.repeat(2 * i - 1).padEnd(2 * H - 1) + '\n';
+}
+for (let _ = 0; _ < 2; _++) tree += ' '.repeat(H - 1) + TRUNK.repeat(3) + '\n';
+tree += ' '.repeat(H - 2) + '╰╮╰╮\n';
+document.getElementById('tree').textContent = tree;
+
+/* 雪花 */
+setInterval(()=>{
   const s = document.createElement('div');
-  s.className = 'snow';
-  s.innerHTML = '❄';
-  s.style.left = Math.random()*100+'%';
-  s.style.animationDuration = 2+Math.random()*3+'s';
-  s.style.opacity = Math.random();
+  s.className = 'snow'; s.textContent = '❄';
+  s.style.left = Math.random()*100 + '%';
+  s.style.animationDuration = 3 + Math.random()*3 + 's';
   document.body.appendChild(s);
   setTimeout(()=>s.remove(), 6000);
-}
-setInterval(snow, 150);
+}, 200);
 </script>
 </body>
 </html>
